k8s/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: customer-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: customer

  template:
    metadata:
      labels:
        app: customer

    spec:
      containers:
        - name: customer

          image: nnirmal24/kubecart-customer:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8001
