k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: nnirmal24/kubecart-frontend:latest

          
          ports:
            - containerPort: 80
