k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
        - name: grafana

          image: grafana/grafana

          ports:
            - containerPort: 3000
