k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongo-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
        - name: mongo

          image: mongo:latest

          ports:
            - containerPort: 27017

          volumeMounts:
            - mountPath: /data/db
              name: mongo-storage

      volumes:
        - name: mongo-storage

          persistentVolumeClaim:
            claimName: mongo-pvc
