k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: products-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: products

  template:
    metadata:
      labels:
        app: products

    spec:
      containers:
      - name: products
        image: nnirmal24/kubecart-products:latest

        ports:
        - containerPort: 8002
