k8s/shopping-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: shopping-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: shopping

  template:
    metadata:
      labels:
        app: shopping

    spec:
      containers:
        - name: shopping

          image: nnirmal24/kubecart-shopping:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8003
