k8s/customer-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: customer-service

spec:
  selector:
    app: customer

  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001

  type: NodePort
