k8s/grafana-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: grafana-service

spec:
  selector:
    app: grafana

  type: NodePort

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30300
