k8s/products-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: products-service

spec:
  selector:
    app: products

  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002

  type: NodePort
