k8s/prometheus-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: prometheus-service

spec:
  selector:
    app: prometheus

  type: NodePort

  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30090
