k8s/shopping-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shopping-service

spec:
  selector:
    app: shopping

  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003

  type: NodePort
