k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kubecart-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: kubecart.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service

                port:
                  number: 80

          - path: /products
            pathType: Prefix

            backend:
              service:
                name: products-service

                port:
                  number: 8002
